# Vitalyn

./: .gitignore  README.md  package-lock.json  package.json  render.yaml
.github/workflows/: deploy-pages.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260715_0001_initial.py  20260716_0002_health_records.py
backend/app/: __init__.py  ai_provider.py  auth_service.py  config.py  database.py  domain.py  main.py  models.py  repository.py  safety.py  schemas.py  security.py  service.py  user_repository.py
backend/scripts/: gemini_transcribe.mjs
backend/tests/: test_api.py  test_health_memory.py
docs/: AUDIT.md  Architecture.md  Design.md  IMPLEMENTATION_PLAN.md  Memory.md  PRD.md  Phases.md  Rules.md  Vision.md
mobile/: pubspec.yaml
mobile/lib/: main.dart
web/: index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
web/src/: App.tsx  styles.css
web/src/lib/: api.test.ts  api.ts  demoData.ts  session.ts
website/: app.js  index.html  styles.css
